--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "shuffle": "^0.2.2",
+    "shuffle-array": "^1.0.1",
+    "styled-components": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
